fix(marketplace): fix alignment issues on marketplace
Will be redesigned most likely next sprint, but the alignment
needs fixing before we go live

--- a/src/styles/components/marketplace/_marketplaceCommon.sass
+++ b/src/styles/components/marketplace/_marketplaceCommon.sass
@@ -50,16 +50,14 @@ uni-marketplace
         display: block
         width: 100%
         background-color: white
-        padding-top: 7rem
-        padding-bottom: 18rem
+        padding: 3rem 0
         text-align: center
         margin: 0
         font-weight: bold
         color: $uni-color-positive
 
     .app-containers
-        width: 80%
-        padding-bottom: 4rem
+        width: 100%
         padding-left: 10%
         padding-right: 10%
         display: flex
@@ -69,10 +67,7 @@ uni-marketplace
         align-items: stretch
 
     .app-container
-        margin-top: -7.5rem
-        margin-left: 1rem
-        margin-right: 1rem
-        margin-bottom: 10rem
+        margin: 0 0 5rem 1rem
         width: 16rem
         order: 0
         flex: 0 1 auto
